# memory-lane

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PYTHON_GUIDELINES.md  README.md  pyproject.toml  requirements.txt
src/memory_lane/: __init__.py  __main__.py  constants.py  image_manager.py
src/memory_lane/device_funcs/: __init__.py
src/memory_lane/file_funcs/: __init__.py
src/memory_lane/folder_funcs/: __init__.py
src/memory_lane/image_funcs/: __init__.py  __main__.py
src/memory_lane/plot_utils/: __init__.py  constants.py
src/memory_lane/video_funcs/: __init__.py
tests/: conftest.py  test_duplicates.py  test_enumerate_files.py  test_example.py  test_ignored_files.py  test_real_example.py  test_renaming.py
